--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <h1>Here is the first line of code I wrote</h1>
+    <h2>this is the first change I made</h2>
   </body>
 </html>
